Release ...
* The "pic" and "grap" utilities have been added from Plan 9 sources.
* The "vgrind" utility has been added from OpenSolaris sources.
* "refer" and related utilites have been added from OpenSolaris sources.

Release 051015
* troff, dpost, otfdump: Handle TrueType files with version 3.0 "post" table
  and no Microsoft/Unicode "cmap" subtable.
* otfdump: Kerning information was omitted for all but the first font when
  multiple font file arguments were given. This has been fixed.
* troff: Fonts that contain possible ligatures (fi, fl, etc.) in their file
  names are now mounted correctly.
* dpost: Allow only the glyph at position 0 to be named ".notdef" when
  generating Type 42 font data.
* dpost: No longer leaves a stale temporary file in /var/tmp.
* tbl: Inspects the first 4000 rows of a table now (instead of the first 200)
  in order to determine column widths and "T{" blocks.
* tbl: Can handle more than 62 "T{" blocks per table now.

Release 051011
* troff/dpost: Support for OpenType fonts has been added. This includes
  support for CFF-based (PostScript) OpenType fonts as well as support for
  most TrueType fonts.
* otfdump: New utility that prints the contents of an OpenType font file in
  an ASCII format just as troff interprets it.
* troff: A ".ftr" request has been introduced as a font-specific variant of
  the ".tr" request.
* troff: A ".feature" request has been introduced to access special features
  of OpenType fonts.
* troff: Kerning is now applied to pairs of characters that originate from
  the same font mounted at two different positions.
* dpost: Can now access all characters in a large PostScript font, not only
  the first 255.
* dpost: If the data in a PFB file to be included does not end with a
  newline character, add one to the generated PostScript to achieve a
  consistent DSC structure (Bugreport by Sebastian Leusch).
* dpost: The limit of characters with "x X" commands has been raised from